--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,36 @@
+body {
+	font-family: arial, sans-serif;
+	font-size: small;
+}
+
 header {
-	color: green;
-	display: inline;
+	color: #222;
+	float: right;
+	
 }
 
 header li {
 	list-style-type: none;
+	display: inline;
+	padding: 5px;
+}
+
+#logo {
+	// width: 50px;
+	height: 92px;
+
+}
+
+#searchBox {
+	padding: 200px 0 0 500px;
+}
+
+.clear {
+	clear: both;
+}
+
+#searchText input{
+	width: 425px;
+	height: 26px;
+
 }
