--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 #container {
-	width: 100%;
-	height: 100%;
+/*	width: 100%;
+	height: 100%;*/
 }
 
 body {
@@ -18,6 +18,19 @@ header {
 	
 }
 
+#main-content {
+	position: absolute;
+	height : 50%;
+	width: 50%;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	/*background: red;*/
+	margin: auto;
+
+}
+
 .navStyle li {
 	list-style-type: none;
 	display: inline;
@@ -28,12 +41,18 @@ header {
 
 #logo {
 	/*width: 50px;*/
-	height: 92px;
+	width: 44%;
+	height: 44%;
+	padding-top: 8%;
+	padding-bottom: 6%;
+	display: block;
+	margin: auto;
 
 }
 
 #searchBox {
-	padding: 200px 0 0 500px;
+	/*padding: 200px 0 0 500px;*/
+
 }
 
 .clear {
@@ -41,30 +60,31 @@ header {
 }
 
 #searchText input{
-	width: 425px;
-	height: 26px;
-	margin-left: 425px;
+	width: 90%;
+	padding-top: 1%;
+
+	display: block;
+	margin: auto;
+	/*margin-left: 425px;*/
 
 }
 
 #buttons {
-	margin-left: 525px;
-	margin-top: 25px;
+/*	margin-left: 525px;
+	margin-top: 25px;*/
+	width: 50%;
+	margin: auto;
+	padding: 5%;
+	text-align: center;
+
 }
 
 #buttons button{
-	margin-right: 10px;
-
+	padding: 3%;
+	margin: 2%;
 }
 footer {
-/*	margin-top: 303px;
-	margin-bottom: 0;
-	width: 100%;
-	height: 40px;
-	background-color: #f2f2f2;
-	font-size: small;
-	padding: 0;
-*/
+
 	position: fixed;
 	width: 100%;
 	height: 40px;
