--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,8 @@ header {
 
 #logo {
 	/*width: 50px;*/
-	width: 44%;
-	height: 44%;
+	
+	height: 92px;
 	padding-top: 8%;
 	padding-bottom: 6%;
 	display: block;
@@ -65,6 +65,7 @@ header {
 
 	display: block;
 	margin: auto;
+	
 	/*margin-left: 425px;*/
 
 }
